--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,3 +11,14 @@ jobs:
       - name: Check build status
         run: |
           echo "hello"
+    
+    - uses: Stockopedia/action-get-changed-files@v1
+      id: get_changed
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        ignore: "**/+(.github)"
+        foldersOnly: false 
+        format: csv
+  
+    - name: Echo changed files
+      run: echo ${{ steps.get_changed.outputs.changed }}
