--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,13 +12,12 @@ jobs:
         run: |
           echo "hello"
     
-    - uses: Stockopedia/action-get-changed-files@v1
-      id: get_changed
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        ignore: "**/+(.github)"
-        foldersOnly: false 
-        format: csv
+      - uses: Stockopedia/action-get-changed-files@v1
+        id: get_changed
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          ignore: "**/+(.github)"
+          foldersOnly: true 
   
     - name: Echo changed files
       run: echo ${{ steps.get_changed.outputs.changed }}
