--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           ignore: "**/+(.github)"
-          foldersOnly: true 
-  
+          foldersOnly: false 
+          format: csv
+      
       - name: Echo changed files
         run: echo ${{ steps.get_changed.outputs.changed }}
