--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,9 @@ jobs:
         id: get_changed
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          ignore: "**/+(.github)"
-          foldersOnly: false 
-          format: csv
+          ignore: "**/*.yaml"
+          foldersOnly: true 
+          format: json
       
       - name: Echo changed files
         run: echo ${{ steps.get_changed.outputs.changed }}
