--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         id: get_changed
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          ignore: "**/*.yaml"
+          ignore: "**/+(.github/*)"
           foldersOnly: true 
           format: json
       
