--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,8 +33,8 @@ jobs:
     defaults:
       run:
         working-directory: src/${{ matrix.package }}
-    # steps:
-    #   - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 # So the two key points are key in the filter is the directory name and then the part:
 
 # defaults:
